--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" type="text/css" href="reset.css">
         <link rel="stylesheet" type="text/css" href="base.css">
+        <script src="https://use.fontawesome.com/98ad482af3.js"></script>
     </head>
     <body>
         <div data-hook="main"></div>
