--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,14 @@
         <script src="https://use.fontawesome.com/98ad482af3.js"></script>
     </head>
     <body>
-        <div data-hook="main"></div>
+        <div class="main" data-hook="main">
+            <div class="sk-folding-cube">
+                <div class="sk-cube1 sk-cube"></div>
+                <div class="sk-cube2 sk-cube"></div>
+                <div class="sk-cube4 sk-cube"></div>
+                <div class="sk-cube3 sk-cube"></div>
+            </div>
+        </div>
         <script src="app.js"></script>
     </body>
 </html>
